--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
                         About me
                       </h5>
                     </div>
-                    <p class="lead">
-                      I am a part-time AI Research Intern at the University of Oklahoma. In addition, I serve as a Lecturer at the Department of AI and Data Science at FAST School of Computing in Lahore, Pakistan. I hold a Master's degree in Electrical and Computer Engineering from the University of California, Irvine (UCI), graduating in 2023 with a GPA of 3.954. I earned my Bachelor's degree in Electrical Engineering from the University of Engineering and Technology, Lahore, Pakistan, with a GPA of 3.04, in 2019. With over three years of hands-on research experience in healthcare technology and a strong passion for AI, I am committed to improving healthcare using AI by pursuing AI in healthcare research.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
+                    <p class="lead" style="text-align: justify;">
+      I am currently a part-time AI Research Intern at the University of Oklahoma and a Lecturer in the Department of AI and Data Science at FAST School of Computing, Lahore, Pakistan. I earned my Master’s degree in Electrical and Computer Engineering from the University of California, Irvine (UCI) in 2023 with a GPA of 3.954, following a Bachelor’s degree in Electrical Engineering from the University of Engineering and Technology, Lahore in 2019 with a GPA of 3.04.
+    </p>
+    <p class="lead" style="text-align: justify;">
+      With over three years of research and academic experience spanning data science and artificial intelligence, I am seeking a PhD position to further deepen my expertise, advance my research skills, and contribute original work to the discipline.
+    </p>
+  </div>
+</div>
           </div>
         </div>
       </div>
@@ -121,25 +122,28 @@
                 </div>
 
                 <div class="service-content">
-                  <h2 class="s-title">AI Research Experience</h2>
+                  <h2 class="s-title">Acadamic Research Experience</h2>
 
 
                   <p class="s-description text-center">
                     <p style="color:blue">Remote Research Assistant, The University of Oklahoma, Oct 2024 – Present</p>
                     <p style="color:black">Statistical analysis, predictive modeling, Explainable AI</p>
                     <ul>
-                      <li style="text-align:left;">Applying statistical analysis and predictive modeling techniques to predict students’ mental health and academic performance in college</li>
-                      <li style="text-align:left;">Employing explainable AI techniques to reveal the model decision-making process, leading to a conference paper submission</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: Enhancing Transparency in Educational Decision-Making using XAI Technique, Conference paper, ASEE 2025 [Accepted at ASEE 2025]</li>
+                      <li style="text-align:left;">Built scikit-learn and PyTorch pipelines with SMOTE and GridSearchCV to predict student mental health,
+                      performance, and drop-out risk</li>
+                      <li style="text-align:left;">Applied LIME and SHAP to improve model transparency</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: Enhancing Transparency in Educational Decision-Making using XAI Technique, Conference paper, ASEE 2025</li>
                     </ul>
                   </p>
 
                   <p class="s-description text-center">
-                    <p style="color:blue">Remote Research Assistant, School of Engineering Education Sep 2023 – Jan 2024</p>
+                    <p style="color:blue">Remote Research Assistant, School of Engineering Education Sep 2023 – June 2024</p>
                     <p style="color:black">Generative AI, NLP, LLM</p>
                     <ul>
-                      <li style="text-align:left;">Tested the capabilities of the ChatGPT API for summary generation using students’ reflection data set</li>
-                      <li style="text-align:left;">Implemented NLP algorithm, BERT, on the same dataset for summary generation and compared its performance with LLM to generate summaries closer to human-annotated ones </li>
+                      <li style="text-align:left;">Evaluated the specificity of NLP-annotated student reflections using inferential statistical tests and post
+                      hoc analysis, leading to a Journal paper in-preparation</li>
+                      <li style="text-align:left;">Conducted a comparative benchmark of traditional NLP algorithms and LLMs for student reflection
+                      summarization, incorporating persona-based prompt engineering </li>
                       <li style="text-align:left; font-weight: bold;">Outcome: Board 62: Work-in-Progress: A Comparative Analysis of Large Language Models and NLP Algorithms to Enhance Student Reflection Summaries, Conference paper, ASEE 2024</li>
                     </ul>
                   </p>
@@ -163,42 +167,28 @@
                 <div class="service-ico">
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">healthcare technology research</h2>
+                  <h2 class="s-title">Industrial Research Experience</h2>
                   <p class="s-description text-center">
-                    <p style="color:blue">Research Scientist Dec 2020 - Sep 2021</p>
+                    <p style="color:blue">Research Scientist Aug 2019 - Present (part-time) </p>
                     <ul>
-                      <li style="text-align:left;">Pakistan office of Ujala Technologies, Cincinnati Ohio</li>
-                      <li style="text-align:left;">Implemented the embedded firmware of a low-cost portable mechanical ventilator</li>
-                      <li style="text-align:left;">Performed design verification and reviews for FDA and IRB approval</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: A Low-cost, Automated, Portable Mechanical Ventilator for Developing World, Conference Paper, IEEE GHTC 2021</li>
+                      <li style="text-align:left;">Integrated Medical Sensors, Irvine, California (remotely) </li>
+                      <li style="text-align:left;">Leading research projents on glucose forecasting using LSTM, and developing RAG-based chatbots to
+                      provide personalized recommendations for diabetes patients on a CGM mobile app</li>
+                      <li style="text-align:left;">Co-developed embedded firmware in C for a health monitoring system using an ARM microcontroller</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: A smart, low cost, wearable technology for remote patient monitoring, Journal Paper, IEEE Sensors Journal, 2021 </li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Research Scientist Aug 2019 - Dec 2020</p>
+                    <p style="color:blue">Research Scientist Sep 2020 - Sep 2021</p>
                     <ul>
-                      <li style="text-align:left;">Pakistan office of Integrated Medical Sensors, Irvine California</li>
-                      <li style="text-align:left;">Analyzed time-series data from IMS continuous glucose monitoring (CGM) devices for five patients, comparing its performance with existing systems</li>
-                      <li style="text-align:left;">Researched continuous glucose monitoring devices, identified research gaps, and led design reviews and verification processes for FDA and IRB approval</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: Eventually led IMS to win the DCB Open Innovation Challenge 2024</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: A Novel Semiconductor based Continuous Multi-Sensor, Multi-Modal Health
-                        Monitoring Platform for Chronic Disease Management – Human Feasibility [Journal Paper In Preparation]
-                    </ul>
+                      <li style="text-align:left;">Ujala Technologies, Cincinnati, Ohio (remotely)</li>
+                      <li style="text-align:left;">Co-developed embedded firmware in C for a low-cost, portable ventilator using an ARM microcontroller</li>
+                      <li style="text-align:left;">Led design verification and conducted regulatory reviews to support FDA/IRB approval for the ventilator</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: A low-cost, portable mechanical ventilator, Conference Paper, IEEE GHTC 2021</li>
+                      </ul>
                   </p>
-                  <p class="s-description text-center mt-3">
-                    <p style="color:blue">Research Assistant Aug 2018 – Aug 2019</p>
-                    <ul>
-                      <li style="text-align:left;">University of Engineering and Technology, Lahore, Pakistan</li>
-                      <li style="text-align:left;">Implemented Firmware of a low-cost health monitoring system</li>
-                      <li style="text-align:left;">Integrated Wireless module for seamless communication between different components</li>
-                    </ul>
-                    <span class="fw-bold d-flex text-start">Outcome:</span>
-                    <ul style="font-weight: bold;">
-                      <li style="text-align:left;">A smart, low cost, wearable technology for remote patient monitoring, Journal Paper, IEEE Sensors Journal, 2021 </li>
-                      <li style="text-align:left;">A smart, low cost, wearable technology for remote patient monitoring, Conference paper, IEEE GCIoT 2019</li>
-                    </ul>
-                  </p>
-
-
+                  
+                  
                 </div>
               </div>
             </div>
@@ -280,51 +270,9 @@
 </div>
 </div>
 
-<div class="col-12 mt-3 ">
-  <div class="service-box ">
-    <div class="service-content">
-      Video advertisement generation using multimodal data and generative AI
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-</div>
-</div>
-</div>
 
-<div class="row d-flex justify-content-center mt-4">
-  <div class="col-sm-12">
-  <div class="title-box text-center">
-  <h3 class="title-a">
-    Co-advised MS Thesis
-  </h3>
-    <div class="line-mf"></div>
-  </div>
-  </div>
-  <div class="row d-flex justify-content-center">
-  <div class="col-12 ">
-  <div class="service-box ">
-  
-    <div class="service-content">
-      <div class="row">
-        <div class="col-12 col-lg-6">
-          <div class="pro_img">
-            <p class="text-start" style="color: black;">
-             1--Few-Shot and Zero-Shot Learning for Sentiment Analysis in Low-Resource Languages Using Large Language Models
-          </div>
-        </div>
-        <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
-          <p class="text-start" style="color: black;">
-            2--Understanding Customer Satisfication & Human Agent Behaviour via LLM-Driven Analysis
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  
+
+
 
     <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
@@ -554,6 +502,43 @@
                 <div class="line-mf"></div>
             </div>
           </div>
+          <!-- Project: Multilingual RAG Chatbot -->
+<div class="col-12 col-md-6 col-lg-4">
+  <div class="service-box">
+    <div class="service-ico">
+      <div class="service-content">
+        <h2 class="s-title" style="text-transform: none;">
+          Multilingual RAG Chatbot
+        </h2>
+        <div class="s-description text-center">
+          <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
+            <li>Built a multilingual RAG chatbot (LangChain + FAISS) with Groq LLaMA-3, Roboflow, Whisper, and gTTS for plant disease diagnosis, weather forecasts, and crop advisory.</li>
+          </ul>
+          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project" class="btn btn-primary">View GitHub</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Project: AI Navigation Assistant -->
+<div class="col-12 col-md-6 col-lg-4">
+  <div class="service-box">
+    <div class="service-ico">
+      <div class="service-content">
+        <h2 class="s-title" style="text-transform: none;">
+          AI Navigation Assistant for Visually Impaired
+        </h2>
+        <div class="s-description text-center">
+          <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
+            <li>Built an AI navigation assistant for visually impaired users using MediaPipe, MiDaS, gTTS, and Gemma-3n for real-time path guidance.</li>
+          </ul>
+          <a href="https://github.com/Eeshababar/Gemma-3n-challenge" class="btn btn-primary">View GitHub</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
           <div class="row d-flex justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
               <div class="service-box">
