--- a/index.html
+++ b/index.html
@@ -91,14 +91,27 @@
                         About me
                       </h5>
                     </div>
-                    <p class="lead" style="text-align: justify;">
-    I am a part-time <b>AI Research Assistant</b> at the <b>University of Oklahoma</b> and a <b>Lecturer</b> at the <b>FAST School of Computing, Lahore</b>.  
-  I earned my <b>MS in Electrical and Computer Engineering</b> from the <b>University of California, Irvine (UCI)</b> in 2023 (GPA 3.95), after completing my <b>BS in Electrical Engineering (GPA : 3.04) </b> at the <b>University of Engineering and Technology (UET), Lahore</b>
-  </p>
-    </p>
-    <p class="lead" style="text-align: justify;">
-      With over three years of intensive research experience, I have built expertise through remote <b>RAships</b> at <b>Purdue University</b>, <b>University of Oklahoma</b>, <b>University of California, Irvine</b>, and <b>Integrated Medical Sensors (IMS), Irvine California</b>.  
-    I am now determined to pursue a PhD at the intersection of </b>data science, machine learning and AI</b> to evolve as both a learner and contributor, driving innovation in the field.
+                    <p class="lead">
+  I am a part-time <strong>AI Research Assistant</strong> at the <strong>University of Oklahoma</strong> 
+  and a <strong>Lecturer</strong> in the <strong>Department of AI and Data Science</strong> at 
+  <strong>FAST University, Lahore</strong>. 
+  I earned my <strong>MS in Electrical and Computer Engineering</strong> from the 
+  <strong>University of California, Irvine (UCI)</strong> in 2023 with a GPA of <strong>3.95</strong>, 
+  following my <strong>BS in Electrical Engineering</strong> from the 
+  <strong>University of Engineering and Technology (UET), Lahore</strong>, 
+  where I graduated with a GPA of <strong>3.04</strong>.
+</p>
+
+<p class="lead">
+  With over <strong>three years of research experience</strong> through remote assistantships at 
+  <strong>Purdue University</strong>, the <strong>University of Oklahoma</strong>, 
+  <strong>UC Irvine</strong>, and <strong>Integrated Medical Sensors (IMS), California</strong>, 
+  I am committed to pursuing a <strong>PhD in data science, machine learning, and AI</strong> ,  
+  advancing as both a <strong>learner</strong> and <strong>innovator</strong> to shape 
+  impactful contributions in the field.
+</p>
+
+
     </p>
   </div>
 </div>
@@ -141,7 +154,7 @@
                   </p>
 
                   <p class="s-description text-center">
-                    <p style="color:blue">School of Engineering Education (remotely) </p>
+                    <p style="color:blue">Purdue University (remotely) </p>
                     <p style="color:black">Sep 2023 -- June 2024</p>
                     <ul>
                       <li style="text-align:left;">Evaluated the specificity of NLP-annotated student reflections using inferential statistical tests and post
@@ -155,7 +168,7 @@
              
                   
                   <p class="s-description text-center">
-                    <p style="color:blue">School of Education, UC Irvine (remotely) </p>
+                    <p style="color:blue">UC Irvine (remotely) </p>
                     <p style="color:black">Dec 2023 -- Feb 2024</p>
                     <ul>
                       <li style="text-align:left;">Researched college students’ perceptions of generative AI across disciplines by designing and administering surveys, then analyzing responses for actionable insights.</li>
@@ -466,7 +479,7 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built a multilingual RAG chatbot (LangChain + FAISS) with Groq LLaMA-3, Roboflow, Whisper, and gTTS for plant disease diagnosis, weather forecasts, and crop advisory.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project" class="btn btn-primary">View GitHub</a>
+          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project.git" class="btn btn-primary">View GitHub</a>
         </div>
       </div>
     </div>
@@ -484,7 +497,7 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built an AI navigation assistant for visually impaired users using MediaPipe, MiDaS, gTTS, and Gemma-3n for real-time path guidance.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Gemma-3n-challenge" class="btn btn-primary">View GitHub</a>
+          <a href="https://github.com/Eeshababar/Gemma-3n-challenge.git" class="btn btn-primary">View GitHub</a>
         </div>
       </div>
     </div>
@@ -504,7 +517,7 @@
                         <li style="text-align:left;">Classified data through predictive modeling, using SMOTE for class imbalance problem and GridSearch and Cross-validation for parameters optimization <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/Hospital-Readmission-Rate-Prediction" class="btn btn-primary">View GitHub</a>
+                      <a href="git@github.com:Eeshababar/Hospital-Readmission-Rate-Prediction.git" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
@@ -522,7 +535,7 @@
                         <li style="text-align:left;">Predicted links in the graph using autoencoders <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/Network-Science" class="btn btn-primary">View GitHub</a>
+                      <a href="git@github.com:Eeshababar/Network-Science.git" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
@@ -540,7 +553,7 @@
                         <li style="text-align:left;">Predicted relative thermal stability using LSTM and transformer models <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/-Novozymes-Enzyme-Stability-Prediction-" class="btn btn-primary">View GitHub</a>
+                      <a href="git@github.com:Eeshababar/-Novozymes-Enzyme-Stability-Prediction-.git" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
@@ -731,7 +744,7 @@
                   <div class="service-content">
                     <h2 class="s-title" style="text-transform: none;">Received AWS All Builders Welcome Grant to attend AWS annual Conference in Nevada Las Vegas, 2022</h2>
                     <p class="s-description text-center">
-                      <a href="https://aws.amazon.com/events/" class="btn btn-primary">View</a>
+                      <a href="https://drive.google.com/file/d/1l9arXMVwVtIUGwc5mqiafI0K1nVKLOLd/view?usp=sharing" class="btn btn-primary">View</a>
                     </p>
                   </div>
                 </div>
@@ -797,7 +810,7 @@
             <div class="row">
               <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                 <div class="pro_img">
-                  <img class="w-100 rounded-3" height="370" src="assets/img/genAIpost.jfif" alt="Python and AI Workshops">
+                  <img class="w-100 rounded-3" height="370" src="assets/img/GenAI mentorship.jpg" alt="Python and AI Workshops">
                 </div>
               </div>
               <div class="col-12 col-lg-6 d-flex align-items-center">
