--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   With over <strong>three years of research experience</strong> through remote assistantships at 
   <strong>Purdue University</strong>, the <strong>University of Oklahoma</strong>, 
   <strong>UC Irvine</strong>, and <strong>Integrated Medical Sensors (IMS), California</strong>, 
-  I am committed to pursuing a <strong>PhD in data science, machine learning, and AI</strong> ,  
+  I am committed to pursuing a <strong>PhD at the intersection of data science, machine learning, and AI</strong> ,  
   advancing as both a <strong>learner</strong> and <strong>innovator</strong> to shape 
   impactful contributions in the field.
 </p>
@@ -479,7 +479,7 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built a multilingual RAG chatbot (LangChain + FAISS) with Groq LLaMA-3, Roboflow, Whisper, and gTTS for plant disease diagnosis, weather forecasts, and crop advisory.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project.git" class="btn btn-primary">View GitHub</a>
+          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project" class="btn btn-primary">View GitHub</a>
         </div>
       </div>
     </div>
@@ -497,7 +497,7 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built an AI navigation assistant for visually impaired users using MediaPipe, MiDaS, gTTS, and Gemma-3n for real-time path guidance.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Gemma-3n-challenge.git" class="btn btn-primary">View GitHub</a>
+          <a href="https://github.com/Eeshababar/Gemma-3n-challenge" class="btn btn-primary">View GitHub</a>
         </div>
       </div>
     </div>
@@ -517,7 +517,7 @@
                         <li style="text-align:left;">Classified data through predictive modeling, using SMOTE for class imbalance problem and GridSearch and Cross-validation for parameters optimization <br></li>
                         </li>
                       </ul>
-                      <a href="git@github.com:Eeshababar/Hospital-Readmission-Rate-Prediction.git" class="btn btn-primary">View GitHub</a>
+                      <a href="https://github.com/Eeshababar/Hospital-Readmission-Rate-Prediction" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
@@ -535,7 +535,7 @@
                         <li style="text-align:left;">Predicted links in the graph using autoencoders <br></li>
                         </li>
                       </ul>
-                      <a href="git@github.com:Eeshababar/Network-Science.git" class="btn btn-primary">View GitHub</a>
+                      <a href="https://github.com/Eeshababar/Network-Science" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
@@ -553,7 +553,7 @@
                         <li style="text-align:left;">Predicted relative thermal stability using LSTM and transformer models <br></li>
                         </li>
                       </ul>
-                      <a href="git@github.com:Eeshababar/-Novozymes-Enzyme-Stability-Prediction-.git" class="btn btn-primary">View GitHub</a>
+                      <a href="https://github.com/Eeshababar/-Novozymes-Enzyme-Stability-Prediction-" class="btn btn-primary">View GitHub</a>
                     </p>
                   </div>
                 </div>
