--- a/index.html
+++ b/index.html
@@ -479,7 +479,14 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built a multilingual RAG chatbot (LangChain + FAISS) with Groq LLaMA-3, Roboflow, Whisper, and gTTS for plant disease diagnosis, weather forecasts, and crop advisory.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Zameen_dost-hackathon-project" class="btn btn-primary">View GitHub</a>
+          <a
+  href="https://github.com/Eeshababar/Zameen_dost-hackathon-project"
+  class="btn btn-primary"
+  target="_blank"
+  rel="noopener noreferrer"
+  onclick="window.open(this.href, '_blank'); return false;">
+  🔗 View GitHub
+</a>
         </div>
       </div>
     </div>
