--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
   target="_blank"
   rel="noopener noreferrer"
   onclick="window.open(this.href, '_blank'); return false;">
-  🔗 View GitHub
+  View GitHub
 </a>
         </div>
       </div>
@@ -504,7 +504,14 @@
           <ul style="text-align:left; list-style-type: disc; padding-left: 20px;">
             <li>Built an AI navigation assistant for visually impaired users using MediaPipe, MiDaS, gTTS, and Gemma-3n for real-time path guidance.</li>
           </ul>
-          <a href="https://github.com/Eeshababar/Gemma-3n-challenge" class="btn btn-primary">View GitHub</a>
+          <a
+  href="https://github.com/Eeshababar/Gemma-3n-challenge"
+  class="btn btn-primary no-lightbox"
+  target="_blank"
+  rel="noopener noreferrer"
+  onclick="window.open(this.href, '_blank'); return false;">
+  View GitHub
+</a>
         </div>
       </div>
     </div>
@@ -524,7 +531,14 @@
                         <li style="text-align:left;">Classified data through predictive modeling, using SMOTE for class imbalance problem and GridSearch and Cross-validation for parameters optimization <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/Hospital-Readmission-Rate-Prediction" class="btn btn-primary">View GitHub</a>
+                     <a 
+  href="https://github.com/Eeshababar/Hospital-Readmission-Rate-Prediction" 
+  class="btn btn-primary no-lightbox" 
+  target="_blank" 
+  rel="noopener noreferrer">
+  View GitHub
+</a>
+
                     </p>
                   </div>
                 </div>
@@ -542,7 +556,13 @@
                         <li style="text-align:left;">Predicted links in the graph using autoencoders <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/Network-Science" class="btn btn-primary">View GitHub</a>
+                      <a
+  href="https://github.com/Eeshababar/Network-Science"
+  class="btn btn-primary no-lightbox"
+  target="_blank"
+  rel="noopener noreferrer">
+  View GitHub
+</a>
                     </p>
                   </div>
                 </div>
@@ -560,7 +580,14 @@
                         <li style="text-align:left;">Predicted relative thermal stability using LSTM and transformer models <br></li>
                         </li>
                       </ul>
-                      <a href="https://github.com/Eeshababar/-Novozymes-Enzyme-Stability-Prediction-" class="btn btn-primary">View GitHub</a>
+                     <a 
+  href="https://github.com/Eeshababar/-Novozymes-Enzyme-Stability-Prediction-" 
+  class="btn btn-primary no-lightbox" 
+  target="_blank" 
+  rel="noopener noreferrer">
+  View GitHub
+</a>
+
                     </p>
                   </div>
                 </div>
