--- a/index.html
+++ b/index.html
@@ -92,24 +92,26 @@
                       </h5>
                     </div>
                     <p class="lead">
-  I am a part-time <strong>AI Research Assistant</strong> at the <strong>University of Oklahoma</strong> 
-  and a <strong>Lecturer</strong> in the <strong>Department of AI and Data Science</strong> at 
-  <strong>FAST University, Lahore</strong>. 
+ 
+<p class="lead" style="text-align: justify;">
   I earned my <strong>MS in Electrical and Computer Engineering</strong> from the 
-  <strong>University of California, Irvine (UCI)</strong> in 2023 with a GPA of <strong>3.95</strong>, 
-  following my <strong>BS in Electrical Engineering</strong> from the 
-  <strong>University of Engineering and Technology (UET), Lahore</strong>, 
-  where I graduated with a GPA of <strong>3.04</strong>.
+  <strong>University of California, Irvine (UCI)</strong> with a GPA of <strong>3.95</strong> (2023), 
+  following my <strong>BS in Electrical Engineering</strong> with a GPA of <strong>3.04</strong> (2019) from the 
+  <strong>University of Engineering and Technology (UET), Lahore</strong>. 
+  Currently, I am working as a remote <strong>AI Research Scientist</strong> at a </strong>California-based healthcare technology company, 
+  Integrated Medical Sensors</strong>. I am also serving as a <strong>Lecturer</strong> in the 
+  <strong>Department of AI and Data Science</strong> at <strong>FAST National University, Lahore</strong>.
 </p>
 
-<p class="lead">
-  With over <strong>three years of research experience</strong> through remote assistantships at 
+<p class="lead" style="text-align: justify;">
+  With over <strong>three years of AI research experience</strong> through remote assistantships at 
   <strong>Purdue University</strong>, the <strong>University of Oklahoma</strong>, 
   <strong>UC Irvine</strong>, and <strong>Integrated Medical Sensors (IMS), California</strong>, 
-  I am committed to pursuing a <strong>PhD at the intersection of data science, machine learning, and AI</strong> ,  
-  advancing as both a <strong>learner</strong> and <strong>innovator</strong> to shape 
-  impactful contributions in the field.
+  I am dedicated to pursuing a <strong>PhD at the intersection of data science, machine learning, and AI</strong>, 
+  advancing as both a <strong>researcher</strong> and <strong>innovator</strong> to deliver 
+  impactful contributions to the field.
 </p>
+
 
 
     </p>
@@ -144,7 +146,7 @@
 
                   <p class="s-description text-center">
                     <p style="color:blue">The University of Oklahoma, Oklahoma, USA (remotely) </p>
-                    <p style="color:black">Oct 2024 -- Present</p>
+                    <p style="color:black">Oct 2024 -- March 2025 (part-time)</p>
                     <ul>
                       <li style="text-align:left;">Built scikit-learn and PyTorch pipelines with SMOTE and GridSearchCV to predict student mental health,
                       performance, and drop-out risk</li>
@@ -155,7 +157,7 @@
 
                   <p class="s-description text-center">
                     <p style="color:blue">Purdue University, Indiana, USA (remotely) </p>
-                    <p style="color:black">Sep 2023 -- June 2024</p>
+                    <p style="color:black">Sep 2023 -- June 2025 (part-time) </p>
                     <ul>
                       <li style="text-align:left;">Evaluated the specificity of NLP-annotated student reflections using inferential statistical tests and post
                       hoc analysis, leading to a Journal paper in-preparation</li>
@@ -189,10 +191,10 @@
                   <p class="s-description text-center">
                     <p style="color:blue">Integrated Medical Sensors, California, USA (remotely)</p>
                     <ul>
-                      <p style="color:black">Aug 2019 -- Present (part-time)</p>
+                      <p style="color:black">March 2018 -- Sep 2020, July 2025 -- Present</p>
                       <li style="text-align:left;">Leading research projents on glucose forecasting using LSTM, and developing RAG-based chatbots to
                       provide personalized recommendations for diabetes patients on a CGM mobile app</li>
-                      <li style="text-align:left;">Co-developed embedded firmware in C for a health monitoring system using an ARM microcontroller</li>
+                      <li style="text-align:left;">Co-developed embedded firmware in C for a health monitoring system using a microcontroller</li>
                       <li style="text-align:left; font-weight: bold;">Outcome: A smart, low cost, wearable technology for remote patient monitoring, Journal Paper, IEEE Sensors Journal, 2021 </li>
                     </ul>
                   </p>
@@ -212,7 +214,7 @@
                     <p style="color:blue">Ujala Technologies, Ohio, USA (remotely)</p>
                     <ul>
                       <p style="color:black">Sep 2020 --  Sep 2021 </p>
-                      <li style="text-align:left;">Co-developed embedded firmware in C for a low-cost, portable ventilator using an ARM microcontroller</li>
+                      <li style="text-align:left;">Co-developed embedded firmware in C for a low-cost, portable ventilator using a microcontroller</li>
                       <li style="text-align:left;">Led design verification and conducted regulatory reviews to support FDA/IRB approval for the ventilator</li>
                       <li style="text-align:left; font-weight: bold;">Outcome: A low-cost, portable mechanical ventilator, Conference Paper, IEEE GHTC 2021</li>
                       </ul>
@@ -892,7 +894,7 @@
     <div class="service-ico">
       <div class="service-content">
         <h2 class="s-title" style="text-transform: none;">
-          Organizing free-of-cost, remote 6-week comprehensive Python and AI bootcamps to train 150+ underprivileged students nationwide (2025)
+          Organizing free-of-cost, remote 6-weeks comprehensive Python and AI bootcamps to train 150+ underprivileged students nationwide (2025)
         </h2>
         <p class="s-description text-center mt-3">
           <a href="https://www.facebook.com/iCodeguru/videos/765021723146669/" 
@@ -909,7 +911,7 @@
     <div class="service-ico">
       <div class="service-content">
         <h2 class="s-title" style="text-transform: none;">
-          Organizing free-of-cost, remote 6-week Generative AI courses to train 200+ underprivileged students across Pakistan (2025)
+          Organizing free-of-cost, remote 6-weeks Generative AI courses to train 200+ underprivileged students across Pakistan (2025)
         </h2>
         <p class="s-description text-center mt-3">
           <a href="https://drive.google.com/file/d/1-iLYtrkxPUS2aft763DDpLeInEOfQhTU/view" 
